referaatti: viimeiset muutokset tekstiin

--- a/referaatti/referaatti.tex
+++ b/referaatti/referaatti.tex
@@ -123,7 +123,7 @@
 \section{Johdanto}
 
 % Write some science here.
-Eräs ohjelmistoteollisuuden kriittisistä tutkimuskysymyksistä on selvittää kuinka ohjelmistot voidaan jakaa helpommin testattaviin ja ylläpidettäviin komponentteihin. Ohjelmiston testattavuus ja ylläpidettävyys ovat keskeisiä asioita ohjelmistoteollisuudessa. Usein jopa puolet ohjelmistokehityksestä on testausta ja suurin osan projektin budjetista kuluu ylläpitoon. Perinteiset menetelmät ohjelmiston modularisaation varmistamiseen pohjautuvat lähdekoodin fyysisen koon, kuten koodirivien määrän, rajoittamiseen. Menetelmä ei sellaisenaan ole riittävä, sillä koodiriveiltään vähäinen moduuli voi sisältää valtavan määrän kontrollipolkuja (control path). Kontrollipolkujen määrän on havaittu korreloivan ohjelmiston monimutkaisuuden kanssa. Suuri kontrollipolkujen määrä vaikeuttaa ohjelmiston ylläpidettävyyttä ja testattavuutta.
+Eräs ohjelmistoteollisuuden kriittisistä tutkimuskysymyksistä on selvittää kuinka ohjelmistot voidaan jakaa helpommin testattaviin ja ylläpidettäviin komponentteihin. Ohjelmiston testattavuus ja ylläpidettävyys ovat keskeisiä asioita ohjelmistoteollisuudessa. Usein jopa puolet ohjelmistokehityksestä on testausta ja suurin osan projektin budjetista kuluu ylläpitoon. Perinteiset menetelmät ohjelmiston monimutkaisuuden minimoimiseen pohjautuvat lähdekoodin fyysisen koon, kuten koodirivien määrän, rajoittamiseen. Menetelmä ei sellaisenaan ole riittävä, sillä koodiriveiltään vähäinen ohjelmiston osa voi sisältää valtavan määrän kontrollipolkuja (control path). Kontrollipolkujen määrän on havaittu korreloivan ohjelmiston monimutkaisuuden kanssa. Suuri kontrollipolkujen määrä vaikeuttaa ohjelmiston ylläpidettävyyttä ja testattavuutta.
 
 McCabe esittelee artikkelissa ''A Complexity Measure''~\cite{McGabe} matemaattisen menetelmän ohjelmiston kompleksisuuden mittaamiseen. Menetelmä tarjoaa laskennallisen pohjan ohjelmiston monimutkaisuuden arvioimiseksi ja auttaa ohjelmistokehittäjiä tunnistamaan vaikeasti ylläpidettävät ja testattavat osat. Menetelmässä ohjelmiston ohjausvuon (program control flow) esitetään suunnattuna verkkona (directed graph).
 
